# Ecommerce-VoiceBot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Project_Report.md  README.md  docker-compose.yaml  livekit.yaml  main.py  pyproject.toml  requirements.txt  setup.py  voicebot_architecture.txt
app/: dependencies.py  livekit_agent.py  mcp_server.py  server.py
app/config/: qdrant_config.py
app/core/: settings.py
app/service/: livekit_service.py  llm_service.py  llm_service_mcp.py  orders_service.py  qdrant_service.py  rag_service.py  stt_service.py  tts_service.py
data/: orders.csv  policies.csv  products.csv
