[project]
name = "ecommerce-voicebot"
version = "0.1.0"
description = "E-commerce voicebot with RAG and function calling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "langchain-openai>=0.3.35",
    "langchain-core>=0.3.0",
    "qdrant-client>=1.16.1",
    "dotenv>=0.9.9",
    "pyaudio>=0.2.14",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.2",
    "python-multipart>=0.0.20",
]
